# Rust-ETH-Gas-ML

./: Cargo.toml  Justfile  README.md
src/: data.rs  main.rs  model.rs  train.rs
